# legislacao-brasileira

./: README.md  pyproject.toml
scripts/: download_laws.py  download_link_pages.py  html_constituicao.py  link_pages_codigos.py  link_pages_decretos.py  link_pages_decretos_leis.py  link_pages_estatutos.py  link_pages_leis_complementares.py  link_pages_leis_delegadas.py  link_pages_leis_ordinarias.py  link_pages_medidas_provisorias.py  link_pages_pecs.py  link_pages_veto.py  parser_link_pages.py
